force-app/main/default/objects/Product__c/fields/sales_region__c.field-meta.xml
<CustomField>
    <fullName>sales_region__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense USA&apos;) , &apos;Hisense USA&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;USA(OEM)&apos;) , &apos;USA(OEM)&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Mexico&apos;) , &apos;Hisense Mexico&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Australia&apos;) , &apos;Hisense Australia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Malaysia&apos;) , &apos;Hisense Malaysia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense South Africa&apos;) , &apos;Hisense South Africa&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Indonesia&apos;) , &apos;Hisense Indonesia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Chile&apos;) , &apos;Hisense Chile&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;American Sales Department&apos;) , &apos;American Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Middle East and Africa Sales Department&apos;) , &apos;Middle East and Africa Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Asia-Pacific Sales Department&apos;) , &apos;Asia-Pacific Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Key Account Sales Department&apos;) , &apos;Key Account Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Europe Sales Department&apos;) , &apos;Europe Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Colombia&apos;) , &apos;Hisense Colombia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Argentina&apos;) , &apos;Hisense Argentina&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense West Africa&apos;) , &apos;Hisense West Africa&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Saudi&apos;) , &apos;Hisense Saudi&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Vietnam&apos;) , &apos;Hisense Vietnam&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Philippines&apos;) , &apos;Hisense Philippines&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Canada&apos;) , &apos;Hisense Canada&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Peru&apos;) , &apos;Hisense Peru&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Communications Sales Department&apos;) , &apos;Communications Sales Department&apos;, &apos;&apos;) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) )</defaultValue>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hisense USA</fullName>
            </value>
            <value>
                <fullName>USA(OEM)</fullName>
            </value>
            <value>
                <fullName>Hisense Mexico</fullName>
            </value>
            <value>
                <fullName>Hisense Australia</fullName>
            </value>
            <value>
                <fullName>Hisense Malaysia</fullName>
            </value>
            <value>
                <fullName>Hisense South Africa</fullName>
            </value>
            <value>
                <fullName>American Sales Department</fullName>
            </value>
            <value>
                <fullName>Middle East and Africa Sales Department</fullName>
            </value>
            <value>
                <fullName>Asia-Pacific Sales Department</fullName>
            </value>
            <value>
                <fullName>Key Account Sales Department</fullName>
            </value>
            <value>
                <fullName>Europe Sales Department</fullName>
            </value>
            <value>
                <fullName>Communications Sales Department</fullName>
            </value>
            <value>
                <fullName>Hisense Indonesia</fullName>
            </value>
            <value>
                <fullName>Hisense Chile</fullName>
            </value>
            <value>
                <fullName>Hisense Thailand</fullName>
            </value>
            <value>
                <fullName>Hisense Vietnam</fullName>
            </value>
            <value>
                <fullName>Hisense Colombia</fullName>
            </value>
            <value>
                <fullName>Hisense Argentina</fullName>
            </value>
            <value>
                <fullName>Hisense West Africa</fullName>
            </value>
            <value>
                <fullName>Hisense Saudi</fullName>
            </value>
            <value>
                <fullName>Hisense Canada</fullName>
            </value>
            <value>
                <fullName>Hisense Philippines</fullName>
            </value>
            <value>
                <fullName>Hisense Peru</fullName>
            </value>
            <value>
                <fullName>Hisense Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>