force-app/main/default/objects/Product__c/fields/Sales_Region_F__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_F__c</fullName>
    <formula>Text( sales_region__c )</formula>
    <label>Sales Region F</label>
    <type>Text</type>
</CustomField>