force-app/main/default/objects/Product__c/fields/Sales_Series__c.field-meta.xml
<CustomField>
    <fullName>Sales_Series__c</fullName>
    <label>Sales Series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>