force-app/main/default/objects/Product__c/fields/Screen_model__c.field-meta.xml
<CustomField>
    <fullName>Screen_model__c</fullName>
    <label>Screen Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>