force-app/main/default/objects/Product__c/fields/Selling_Points__c.field-meta.xml
<CustomField>
    <fullName>Selling_Points__c</fullName>
    <label>Selling Points</label>
    <type>TextArea</type>
</CustomField>