force-app/main/default/objects/Product__c/fields/Size_Japan__c.field-meta.xml
<CustomField>
    <fullName>Size_Japan__c</fullName>
    <label>尺寸</label>
    <length>20</length>
    <type>Text</type>
</CustomField>