force-app/main/default/objects/Product__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>