force-app/main/default/objects/Product__c/fields/Target_Batch_Time__c.field-meta.xml
<CustomField>
    <fullName>Target_Batch_Time__c</fullName>
    <label>Target Batch Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>