force-app/main/default/objects/Product__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <label>Total Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>