force-app/main/default/objects/Product__c/fields/TV_App_Store__c.field-meta.xml
<CustomField>
    <fullName>TV_App_Store__c</fullName>
    <label>TV App Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>