force-app/main/default/objects/Product__c/fields/TV_Type1__c.field-meta.xml
<CustomField>
    <fullName>TV_Type1__c</fullName>
    <label>TV Type1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>