force-app/main/default/objects/Product__c/fields/TV_Type3__c.field-meta.xml
<CustomField>
    <fullName>TV_Type3__c</fullName>
    <label>TV Type3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>