force-app/main/default/objects/Product__c/fields/Voice_Control__c.field-meta.xml
<CustomField>
    <fullName>Voice_Control__c</fullName>
    <label>Voice Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google Assistant</fullName>
            </value>
            <value>
                <fullName>Works with google assitant</fullName>
            </value>
            <value>
                <fullName>Alaxa</fullName>
            </value>
            <value>
                <fullName>Roku voice</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>