force-app/main/default/objects/Product__c/fields/Voltage_Frequency_Voltage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Voltage_Frequency_Voltage_Frequency__c</fullName>
    <label>Voltage Frequency - Voltage Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>