force-app/main/default/objects/Product__c/fields/Water_Features__c.field-meta.xml
<CustomField>
    <fullName>Water_Features__c</fullName>
    <label>Water Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>