force-app/main/default/objects/Product__c/fields/X3D_Type_Active_or_Passive__c.field-meta.xml
<CustomField>
    <fullName>X3D_Type_Active_or_Passive__c</fullName>
    <label>3D &amp; Type - Active or Passive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3D Active</fullName>
            </value>
            <value>
                <fullName>3D Passive</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>