force-app/main/default/objects/Product__c/recordTypes/AC_Outsourcing_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>AC_Outsourcing_Product_RecordType</fullName>
    <active>true</active>
    <label>AC Outsourcing Product RecordType</label>
</RecordType>