force-app/main/default/objects/Product__c/recordTypes/AC_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>AC_Product_RecordType</fullName>
    <active>true</active>
    <label>AC Product RecordType</label>
</RecordType>