force-app/main/default/objects/Product__c/recordTypes/AC_Product_RecordType_AU_SA.recordType-meta.xml
<RecordType>
    <fullName>AC_Product_RecordType_AU_SA</fullName>
    <active>true</active>
    <label>AC Product RecordType - AU &amp; SA</label>
</RecordType>