force-app/main/default/objects/Product__c/recordTypes/AC_Product_RecordType_MX.recordType-meta.xml
<RecordType>
    <fullName>AC_Product_RecordType_MX</fullName>
    <active>true</active>
    <label>AC Product RecordType - MX</label>
</RecordType>