force-app/main/default/objects/Product__c/recordTypes/ALL_Product_Japan.recordType-meta.xml
<RecordType>
    <fullName>ALL_Product_Japan</fullName>
    <active>true</active>
    <label>ALL Product RecordType - Japan</label>
</RecordType>