force-app/main/default/objects/Product__c/recordTypes/Cooking_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Cooking_Product_RecordType</fullName>
    <active>true</active>
    <label>Cooking Product RecordType</label>
</RecordType>