force-app/main/default/objects/Product__c/recordTypes/Dishwasher_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Dishwasher_Product_RecordType</fullName>
    <active>true</active>
    <label>Dishwasher Product RecordType</label>
</RecordType>