force-app/main/default/objects/Product__c/recordTypes/Freezer_Competitive_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Freezer_Competitive_Product_RecordType</fullName>
    <active>false</active>
    <label>Freezer Competitive Product RecordType</label>
</RecordType>