force-app/main/default/objects/Product__c/recordTypes/Freezer_Outsourcing_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Freezer_Outsourcing_Product_RecordType</fullName>
    <active>true</active>
    <label>Freezer Outsourcing Product RecordType</label>
</RecordType>