force-app/main/default/objects/Product__c/recordTypes/Freezer_Product_RecordType_AU_SA.recordType-meta.xml
<RecordType>
    <fullName>Freezer_Product_RecordType_AU_SA</fullName>
    <active>true</active>
    <label>Freezer Product RecordType - AU &amp; SA</label>
</RecordType>