force-app/main/default/objects/Product__c/recordTypes/Freezer_Product_RecordType_MX.recordType-meta.xml
<RecordType>
    <fullName>Freezer_Product_RecordType_MX</fullName>
    <active>true</active>
    <label>Freezer Product RecordType - MX</label>
</RecordType>