force-app/main/default/objects/Product__c/recordTypes/Mobile_Competitive_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Competitive_Product_RecordType</fullName>
    <active>false</active>
    <label>Mobile Competitive Product RecordType</label>
</RecordType>