force-app/main/default/objects/Product__c/recordTypes/Mobile_Outsourcing_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Outsourcing_Product_RecordType</fullName>
    <active>true</active>
    <label>Mobile Outsourcing Product RecordType</label>
</RecordType>