force-app/main/default/objects/Product__c/recordTypes/Mobile_Page_Layout_AU_SA.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Page_Layout_AU_SA</fullName>
    <active>true</active>
    <label>Mobile Page Layout - AU &amp; SA</label>
</RecordType>