force-app/main/default/objects/Product__c/recordTypes/Mobile_Page_Layout_MX.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Page_Layout_MX</fullName>
    <active>true</active>
    <label>Mobile Page Layout - MX</label>
</RecordType>