force-app/main/default/objects/Product__c/recordTypes/Refrigerator_Competitive_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Refrigerator_Competitive_Product_RecordType</fullName>
    <active>false</active>
    <label>Refrigerator Competitive Product RecordType</label>
</RecordType>