force-app/main/default/objects/Product__c/recordTypes/Refrigerator_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Refrigerator_Product_RecordType</fullName>
    <active>true</active>
    <label>Refrigerator Product RecordType</label>
</RecordType>