force-app/main/default/objects/Product__c/recordTypes/Refrigerator_Product_RecordType_AU_SA.recordType-meta.xml
<RecordType>
    <fullName>Refrigerator_Product_RecordType_AU_SA</fullName>
    <active>true</active>
    <label>Refrigerator Product RecordType - AU &amp; SA</label>
</RecordType>