force-app/main/default/objects/Product__c/recordTypes/Refrigerator_Product_RecordType_MX.recordType-meta.xml
<RecordType>
    <fullName>Refrigerator_Product_RecordType_MX</fullName>
    <active>true</active>
    <label>Refrigerator Product RecordType - MX</label>
</RecordType>