force-app/main/default/objects/Product__c/recordTypes/RegionalProduct.recordType-meta.xml
<RecordType>
    <fullName>RegionalProduct</fullName>
    <active>true</active>
    <label>Regional Product</label>
</RecordType>