force-app/main/default/objects/Product__c/recordTypes/SDHA_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>SDHA_Product_RecordType</fullName>
    <active>true</active>
    <label>SDHA Product RecordType</label>
</RecordType>