force-app/main/default/objects/Product__c/recordTypes/TV_Competitive_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>TV_Competitive_Product_RecordType</fullName>
    <active>false</active>
    <label>TV Competitive Product RecordType</label>
</RecordType>