force-app/main/default/objects/Product__c/recordTypes/TV_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>TV_Product_RecordType</fullName>
    <active>true</active>
    <label>TV Product RecordType</label>
</RecordType>