force-app/main/default/objects/Product__c/recordTypes/TV_Product_RecordType_AU_SA.recordType-meta.xml
<RecordType>
    <fullName>TV_Product_RecordType_AU_SA</fullName>
    <active>true</active>
    <label>TV Product RecordType - AU &amp; SA</label>
</RecordType>