force-app/main/default/objects/Product__c/recordTypes/TV_Product_RecordType_MX.recordType-meta.xml
<RecordType>
    <fullName>TV_Product_RecordType_MX</fullName>
    <active>true</active>
    <label>TV Product RecordType - MX</label>
</RecordType>