force-app/main/default/objects/Product__c/recordTypes/WM_Competitive_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>WM_Competitive_Product_RecordType</fullName>
    <active>false</active>
    <label>WM Competitive Product RecordType</label>
</RecordType>