force-app/main/default/objects/Product__c/recordTypes/WM_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>WM_Product_RecordType</fullName>
    <active>true</active>
    <label>WM Product RecordType</label>
</RecordType>