force-app/main/default/objects/Product__c/recordTypes/WM_Product_RecordType_AU_SA.recordType-meta.xml
<RecordType>
    <fullName>WM_Product_RecordType_AU_SA</fullName>
    <active>true</active>
    <label>WM Product RecordType - AU &amp; SA</label>
</RecordType>