force-app/main/default/objects/Product__c/recordTypes/WM_Product_RecordType_MX.recordType-meta.xml
<RecordType>
    <fullName>WM_Product_RecordType_MX</fullName>
    <active>true</active>
    <label>WM Product RecordType - MX</label>
</RecordType>