force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>sales_region__c</columns>
    <columns>Middle_High_Low_End__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Product_Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Admin</group>
    </sharedTo>
</ListView>