force-app/main/default/objects/Product__c/listViews/All_Regional_Product.listView-meta.xml
<ListView>
    <fullName>All_Regional_Product</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>Product__c</columns>
    <columns>sales_region__c</columns>
    <columns>IsActive__c</columns>
    <columns>Warranty_Year__c</columns>
    <columns>Guiding_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product__c.RegionalProduct</value>
    </filters>
    <filters>
        <field>IsInMyRegion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Regional Products</label>
</ListView>