force-app/main/default/objects/Product__c/listViews/Argentina.listView-meta.xml
<ListView>
    <fullName>Argentina</fullName>
    <columns>Product_Line__c</columns>
    <columns>Series__c</columns>
    <columns>NAME</columns>
    <columns>Name_Description__c</columns>
    <columns>Product__c</columns>
    <columns>sales_region__c</columns>
    <columns>Warranty_Year__c</columns>
    <columns>Product_Image__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product__c.RegionalProduct</value>
    </filters>
    <filters>
        <field>sales_region__c</field>
        <operation>equals</operation>
        <value>Hisense Argentina</value>
    </filters>
    <label>Argentina</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Argentina_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>