force-app/main/default/objects/Product__c/listViews/Gift.listView-meta.xml
<ListView>
    <fullName>Gift</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>sales_region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product__c.Gift</value>
    </filters>
    <label>Gift</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Indonesia_GM</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Philippine_GM</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Vietnam_Office_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>